@@ -34,6 +34,7 @@ defaultValues = {
     # export options
     'export_DPI': 100,
     'export_DPI_PDF': 150,
+    'export_DPI_SVG': 96,
     'export_color': True,
     'export_antialias': True,
     'export_quality': 85,
